[gd_scene load_steps=11 format=3 uid="uid://ghbabccbo7bd"]

[ext_resource type="Script" path="res://scenes/player/dinos/trex_attack.gd" id="1_ushnm"]
[ext_resource type="PackedScene" uid="uid://bb28v0kht4nxk" path="res://scenes/hit/hurtbox.tscn" id="2_xdsoj"]
[ext_resource type="Script" path="res://scenes/hit/hit_stats.gd" id="3_lkne3"]
[ext_resource type="Texture2D" uid="uid://db3d3alt4ovf1" path="res://scenes/assets/dinos/trex_bite.png" id="4_rrbqh"]

[sub_resource type="Resource" id="Resource_tpi87"]
script = ExtResource("3_lkne3")
damage_dealt = 50.0
knockback_strength = 200.0
intensity_seconds = 0.0
damage_on_enter = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_erpft"]
radius = 0.005
height = 0.01

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ycojb"]
radius = 0.005
height = 0.01

[sub_resource type="AtlasTexture" id="AtlasTexture_ytdya"]
atlas = ExtResource("4_rrbqh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2tpd"]
atlas = ExtResource("4_rrbqh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_irs4f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytdya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2tpd")
}],
"loop": false,
"name": &"default",
"speed": 2.0
}]

[node name="trex_attack" type="Node2D"]
script = ExtResource("1_ushnm")
range_length = 60.0
range_width = 45.0
duration = 0.5
cooldown = 1.0

[node name="hurtbox" parent="." instance=ExtResource("2_xdsoj")]
collision_layer = 512
collision_mask = 512
hit_data = SubResource("Resource_tpi87")

[node name="LeftShape" type="CollisionShape2D" parent="hurtbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_erpft")
disabled = true

[node name="RightShape" type="CollisionShape2D" parent="hurtbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ycojb")
disabled = true

[node name="cooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="duration" type="Timer" parent="."]
one_shot = true

[node name="sprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_irs4f")
frame = 1
frame_progress = 1.0

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
